<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/H3.Padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_compass"
            android:id="@+id/descCompass"
            android:textAppearance="@style/H3.TextAppearance.Mini" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <br.com.h3pro.android.watchlocation.view.Compass
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/viewCompass" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="@dimen/H3.Text.Padding">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_true_north"
                        android:id="@+id/txtCompass"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtCompassValue"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bearing"
                        android:id="@+id/txtBearing"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtBearingValue"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_speed"
                        android:id="@+id/txtSpeed"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtSpeedValue"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_altimeter"
                        android:id="@+id/txtAltimeter"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtAltimeterValue"
                        android:textAppearance="@style/H3.TextAppearance.Mini" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_altimeter"
            android:id="@+id/descAltimeter"
            android:textAppearance="@style/H3.TextAppearance.Mini" />

        <br.com.h3pro.android.watchlocation.view.Altimeter
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/viewAltimeter" />

    </LinearLayout>

</LinearLayout>